--- a/cartms/src/main/resources/application.properties
+++ b/cartms/src/main/resources/application.properties
@@ -1,5 +1,27 @@
 server.port=8082
+spring.application.name=cartms
+#server.servlet.context-path=/subject
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ccshoppingcart
 spring.datasource.username=root
 spring.datasource.password=root
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.lease-renewal-interval-in-seconds=15
+eureka.instance.lease-expiration-duration-in-seconds=13
+eureka.instance.preferIpAddress=true
+eureka.client.healthcheck.enabled=true
+
+management.endpoints.web.exposure.include=*
+
+# Output to a temp_folder/file
+#logging.file.path=D:/vivek/work/ccws/logs/
+#logging.file.name=D:/vivek/logs/cartms.log
+#logging.level.root=DEBUG
+#logging.level.org.springframework=ERROR
+#logging.level.com.iitj.cartms = DEBUG
+#logging.path=/my-folder/
+ 
+# Logging pattern for file
+#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+
