--- a/paymentms/src/main/resources/application.properties
+++ b/paymentms/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/ccshoppingcart
 spring.datasource.username=root
 spring.datasource.password=root
+
+management.endpoints.web.exposure.include=*
