--- a/productms/src/main/resources/application.properties
+++ b/productms/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=8081
+spring.application.name=productms
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ccshoppingcart
 spring.datasource.username=root
 spring.datasource.password=root
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.lease-renewal-interval-in-seconds=15
+eureka.instance.lease-expiration-duration-in-seconds=13
+eureka.instance.preferIpAddress=true
+eureka.client.healthcheck.enabled=true
+
+management.endpoints.web.exposure.include=*
